--- a/catalog/Vagrantfile
+++ b/catalog/Vagrantfile
@@ -54,4 +54,4 @@ end
 # Create a forwarded port mapping which allows access to a specific port
 # within the machine from a port on the host machine. In the example below,
 # accessing "localhost:8080" will access port 80 on the guest machine.
-config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+# config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
